fix for contrast

--- a/css/style.css
+++ b/css/style.css
@@ -857,7 +857,7 @@ ESPLORA CORSI
 }
 
 .area .disc{
-    background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.5));
+    background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.7));
     background-clip: content-box;
 }
 .disc{
